--- a/about.html
+++ b/about.html
@@ -1,9 +1,9 @@
 ---
 layout:     default
-title:      Hello!
+title:      Stinger Games
 subtitle:   About
 section:    about
-permalink:  /about/
+permalink:  /about
 style:      dark
 ---
 
