--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 ---
 layout:     default
-title:      Spaceman
-subtitle:   Spaceman
+title:      Stinger Games
+subtitle:   Stinger Games
 section:    index
+style:      dark
 ---
 
 {% for post in site.posts limit:4 %}
