--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@ layout:     default
 title:      Stinger Games
 subtitle:   About
 section:    about
-permalink:  /about
+permalink:  /about/
 style:      dark
 ---
 
